@@ -3,6 +3,24 @@
   xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
   i18n_domain="eea">
 
+  <!-- 6.0 => 6.2 -->
+  <genericsetup:upgradeSteps
+    source="6.0"
+    destination="6.2"
+    profile="eea.exhibit:default">
+
+    <genericsetup:upgradeDepends
+      title="Upgrade eea.exhibit"
+      import_profile="eea.exhibit:default"
+      />
+
+    <genericsetup:upgradeStep
+      title="Create generic image charts"
+      handler="eea.exhibit.upgrades.evolve62.migrate_imagecharts"
+      />
+
+  </genericsetup:upgradeSteps>
+
   <!-- 4.x => 6.0 -->
   <genericsetup:upgradeSteps
     source="4.3"
