@@ -3,6 +3,10 @@ Changelog
 
 6.2-dev - (unreleased)
 ----------------------
+* Upgrade step: Within "Plone > Site setup > Add-ons" click on
+  upgrade button available for eea.exhibit
+* Feature: On saving a chart, copy the generic chart image in the visualization
+  [szabozo0 refs #10019]
 
 6.1 - (2012-11-09)
 ------------------
